# whisper-to-cards

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pages.yml  w2c-worker.yml
demo/: index.backup.html  index.html
outputs/: deck.apkg  deck.csv  notes.html  sections.json  structured.json  transcript.json
outputs/audio/: audio_map.json
scripts/: api.py  auto_run.py  force_asr.py  run_one.sh  uploader.py  worker_supabase.py
src/whisper_to_cards/: asr.py  cards.backup.py  cards.py  cli.py  export.py  render.py  segment.py  structure.py  tts.py
src/whisper_to_cards/export/: zipper.py
tests/: test_cli.py
