[project]
name = "whisper-to-cards"
version = "0.1.0"
description = "Lecture → dyslexia-friendly notes + Anki, as an OSS pipeline."
authors = [
    {name = "Lenise Kenney",email = "126082633+TKHatton@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.19.2,<0.20.0)",
    "rich (>=14.1.0,<15.0.0)",
    "shellingham (>=1.5.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.13.3,<0.14.0)",
    "black (>=25.9.0,<26.0.0)"
]

[tool.poetry]
packages = [{ include = "whisper_to_cards", from = "src" }]

[project.scripts]
w2c = "whisper_to_cards.cli:app"
