[project]
name = "whisper-to-cards"
version = "0.1.0"
description = "Lecture → dyslexia-friendly notes + Anki, as an OSS pipeline."
authors = [
    {name = "Lenise Kenney",email = "126082633+TKHatton@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.12,<0.13)",
    "click (==8.1.7)",
    "rich (>=13.0,<14.0)",
    "shellingham (>=1.5,<2.0)",
    "faster-whisper (>=1.0,<2.0)",
    "numpy (>=1.26,<2.0)",
    "tqdm (>=4.66,<5.0)",
    "soundfile (>=0.12,<0.13)",
    "pydub (>=0.25,<0.26)",
    "genanki (>=0.13,<0.14)",
    "weasyprint (>=62.0,<63.0)"
]



[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.6,<0.7)",
    "black (>=24.8,<25.0)"
]

[tool.poetry]
packages = [{ include = "whisper_to_cards", from = "src" }]
include = [
  { path = "src/whisper_to_cards/assets/fonts/*", format = "wheel" }
]

[project.scripts]
w2c = "whisper_to_cards.cli:app"
